--- a/dockers/docker-platform-monitor/docker-pmon.supervisord.conf.j2
+++ b/dockers/docker-platform-monitor/docker-pmon.supervisord.conf.j2
@@ -156,6 +156,15 @@ dependent_startup=true
 dependent_startup_wait_for=rsyslogd:running
 {% endif %}
 
+[program:bmc]
+command=python3 /usr/local/lib/python3.7/dist-packages/sonic_platform/bmc.py
+priority=10
+autostart=true
+autorestart=true
+stdout_logfile=/var/log/bmc.out.log
+stderr_logfile=/var/log/bmc.err.log
+buffer_size=0
+
 {% if not skip_pcied %}
 [program:pcied]
 command={% if API_VERSION == 3 and 'pcied' not in python2_daemons %}python3 {% else %} python2 {% endif %}/usr/local/bin/pcied
